--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 p{
   padding:0;
   margin:0
@@ -5,9 +6,38 @@ p{
 
 .App{
   background-color: #10103B;
-  color:white
+  color:white;
+  height: 100%;
 }
 
 *{
-  transition-duration:.2s
+  transition-duration:.2s;
+  scrollbar-width:thin;
+  scrollbar-color: #6969dd #00000000;
+  scrollbar-gutter: stable;
+  font-family: 'Varela Round', sans-serif;
+}
+
+html, body, #root{
+  height:100%;
+  background-color: #10103B;
+}
+
+.scollbar {
+  border-radius:10px !important
+}
+
+::-webkit-scrollbar-track {
+  background-color: #e4e4e4;
+  border-radius: 100px !important
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 100px !important
+}
+
+.row{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
