--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,9 @@ html, body, #root{
   flex-direction: row;
   align-items: center;
 }
+
+.col{
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+}
